tests/base/parser/bad/exps/exp_t-match-with.scilexp
let a = True in
match with
| _ => a
end
